@@ -8,8 +8,15 @@ autopartkit (1.08) UNRELEASED; urgency=low
       sure the device file exist.
     - Correct return type of reduce_disk_usage_size().  There is
       nothing to return, so replace 'void*' with 'void'.
+    - Rewrite filesystem creation code to use /sbin/mkfs.* instead of
+      libparted.  Change the default fs from ext2 to ext3 because of
+      this.
+    - Add untested support for xfs and jfs while I am at it.  With the
+      rewrite, it is easy to add new filesystem types.
+    - Change the log function to respect the log level of the message,
+      and to ignore messages with level above 1.
 
- -- Matt Kraai <kraai@debian.org>  Thu,  3 Feb 2005 18:54:55 -0800
+ -- Petter Reinholdtsen <pere@debian.org>  Sat, 19 Mar 2005 11:15:24 +0100
 
 autopartkit (1.07) unstable; urgency=low
 
